--- a/public/tpl/byweb/css/template.css
+++ b/public/tpl/byweb/css/template.css
@@ -173,3 +173,14 @@ a {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.error {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    color: red;
+    background-color: #f2f2f2;
+    padding:50px;
+}
+
+
