--- a/resources/tpl/byweb/css/slider.css
+++ b/resources/tpl/byweb/css/slider.css
@@ -2,28 +2,32 @@
     position: relative;
     display: flex;
     flex-width: wrap;
-    flex-flow: column;
 
+    background: rgb(115,195,232);
+    background: linear-gradient(0deg, rgba(115,195,232,1) 0%, rgba(255,255,255,1) 100%);
 
+    height: 100vh;
 }
 
-
-
-.slider-img {
-
+.slider {
+    position: relative;
     display: flex;
     flex-width: wrap;
-    width: 100%;
-    overflow-x:hidden;
 }
 
-.slider-img img {
-    width: 100%;
+.slider-item {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    align-self: center;
 }
 
+.slider-img {
+    background-size: cover;
 
+}
 
-.slider-txt {
+.slider-item-txt {
     position: absolute;
     display: flex;
     flex-flow: column;
@@ -33,28 +37,26 @@
     width: 600px;
     padding-left: 70px;
     z-index: 100;
-
 }
 
-.slider-txt h1 {
+.slider-item-txt h1 {
     font-size: 3rem;
     padding-bottom: 10px;
     z-index: 100;
 }
 
-.slider-txt h3 {
+.slider-item-txt h3 {
     padding: 15px 0 0 0;
     color: #b64545;
 }
-.slider-txt h3>a {
+
+.slider-item-txt h3 > a {
     padding: 0;
     color: #b64545;
     text-decoration: none;
 }
 
-
-
-.slider-txt  p {
+.slider-item-txt p {
     color: #076ad0;
     font-weight: bold;
     font-size: 1.1rem;
