--- a/resources/tpl/byweb/css/template.css
+++ b/resources/tpl/byweb/css/template.css
@@ -15,6 +15,8 @@ h1, h2, h3 {
 
     font-size: 1.5rem;
     padding-bottom: 15px;
+    font-weight: 900;
+
 }
 
 p {
@@ -32,9 +34,10 @@ p {
 
 .cont {
     width: 100%;
-    max-width: 950px;
+    max-width: 1600px;
     position: relative;
     display: block;
+    margin: 0 auto;
 }
 
 .row {
@@ -70,7 +73,7 @@ a {
 }
 
 .top {
-    padding: 5px;
+    padding: 0 5px;
     text-align: center;
     position: relative;
     display: block;
