--- a/resources/sass/byweb/_variables.scss
+++ b/resources/sass/byweb/_variables.scss
@@ -9,16 +9,19 @@ $line-height-base: 1.6;
 // Colors
 $blue: rgb(115,195,232);
 $body-bg: #faf6f1;
+$body-clr: #888888;
 $indigo: #6574cd;
 $purple: #9561e2;
+$purple-dark: #423550;
 $pink: #fe7676;
 $pink-light: #fb9898;
 $red: #e3342f;
-$orange: #f6993f;
+$orange: #d07f60;
 $yellow: #ffed4a;
 $green: #6dd4b2;
-$teal: #4dc0b5;
+$green-dark: #5fa6aa;
 $cyan: #6cb2eb;
 $white: #FFF;
+$brown: #4c3739;
 
 $black: #2f343a;
