--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,11 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 // Variables
 @import 'byweb/variables';
-
+@import 'byweb/cleaner';
 @import 'byweb/template';
+@import 'byweb/buttons';
 @import "byweb/menu/nav-menu";
 @import "byweb/menu/top-menu";
 @import 'byweb/slider/slider-item';
+@import "byweb/polosa";
+@import "byweb/contents/top";
 
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
