--- a/resources/sass/byweb/template.scss
+++ b/resources/sass/byweb/template.scss
@@ -1,10 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 
 html {
+    overflow-x: hidden;
     font-size: 18px;
 
     @media (max-width: 950px) {
@@ -16,31 +13,30 @@ html {
 
 }
 
-//header {
-//    min-height: 100vh;
-//}
-
 body {
-
     font-family: 'Roboto', Arial, sans-serif;
     min-width: 320px;
     background: $body-bg;
-
-    //@media screen and (max-width: 860px){
-    //
-    //    font-size: 0.8rem;
-    //
-    //}
-
+    color: $body-clr;
 
 }
-h1, h2, h3 {
 
+h1, h2, h3 {
     font-size: 1.5rem;
     padding-bottom: 15px;
     font-weight: 900;
-
+    color: $black;
 }
+
+h1, h2  {
+    text-transform: uppercase;
+}
+
+figure {
+
+    padding: 0 25px;
+}
+
 
 p {
     line-height: 1.7rem;
@@ -51,28 +47,12 @@ p {
     margin: 25px 0;
 }
 
-.btn {
-//display: block;
-    color:#FFF;
-    text-decoration: none;
-    background: $black;
-    border: 1px solid $white;
-    border-radius: 10px;
-    padding: 10px 15px;
-    font-weight: bold;
 
-    &:hover {
-        background: $pink;
-    }
-
-    //display: none;
-}
 
 .container {
     position: relative;
     max-width: 1490px;
     margin: 0 auto;
-    //border: 1px solid #777;
     padding: 0 25px;
 }
 
@@ -89,12 +69,14 @@ p {
 
 .black {
     background: $black;
-    color: #fff;
+    color: $white;
 }
 
 a {
-    color: #fe7676;
+    color: $pink-light;
 }
+
+
 
 .item-4 {
     box-sizing: border-box;
@@ -120,19 +102,17 @@ a {
     z-index:1;
 }
 
-.polosa {
-    text-align: center;
-}
 
 .green {
-    background: #5fa6aa;
-    color: #FFF;
+    background: $green-dark;
+    color: $white;
 }
 
 .py-30 {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 30px 0;
 }
+
+.py-50 {padding: 50px 0;}
 
 .px-10 {
     padding-left: 10px;
@@ -146,6 +126,10 @@ a {
     color: red;
     background-color: #f2f2f2;
     padding: 50px;
+}
+
+.center {
+    text-align: center;
 }
 
 @media only screen and (max-width: 650px) {
