--- a/resources/sass/byweb/contents/top.scss
+++ b/resources/sass/byweb/contents/top.scss
@@ -1,23 +1,47 @@
+
+
 .content-top {
 
 }
 .content-top-item{
     display: flex;
     justify-content: space-between;
+    @media screen and (max-width: 820px) {
+        flex-wrap: wrap;
+    }
 }
 
 .content-top-item {
     figure {
-
         flex-basis: 20%;
+
+        @media screen and (max-width: 820px) {
+            flex-basis: 100%;
+
+text-align: center;
+            padding-bottom: 20px;
+
+        }
+
     }
     img {
         max-width: 460px;
+        @media screen and (max-width: 820px) {
+            width: 100%;
+        }
     }
 }
 
 .content-top-item-txt {
 
     flex-basis: 80%;
+
+    @media screen and (max-width: 820px) {
+
+        flex-basis: 100%;
+        h2 {
+           text-align: center;
+        }
+    }
 
 }
