--- a/resources/sass/byweb/contents/why-us.scss
+++ b/resources/sass/byweb/contents/why-us.scss
@@ -10,7 +10,40 @@
     }
 }
 
-.why-us-item-header h3 {
+.why-us-items .item-2 h3 {
     font-size: 1.5rem;
     font-weight: normal;
+    padding-bottom: 10px;
+
+}
+
+.why-us-icons {
+    display: flex;
+    margin: 10px 0;
+}
+
+.why-us-item-icon {
+    display: flex;
+    box-sizing: border-box;
+    color: $pink;
+    padding: 60px;
+    background: $body-bg;
+    border-radius:1000px;
+    height: 130px;
+    width: 130px;
+    border: 1px solid $pink;
+    margin: 0 15px;
+    text-align: center;
+    justify-content: center;
+
+}
+
+.why-us-item-icon i {
+    box-sizing: border-box;
+    align-self: center;
+    font-size: 54px;
+}
+
+.why-us-item-txt {
+    width: calc(100% - 130px);
 }
