--- a/resources/sass/byweb/menu/nav-menu.scss
+++ b/resources/sass/byweb/menu/nav-menu.scss
@@ -96,6 +96,10 @@
     justify-content: flex-end;
     align-self: center;
     padding: 0 20px;
+    @media screen and (max-width: 820px){
+        padding: 0;
+
+    }
 }
 
 .menu-list {
