--- a/resources/sass/byweb/polosa.scss
+++ b/resources/sass/byweb/polosa.scss
@@ -17,7 +17,15 @@
         color: $white;
     }
 
+    .polosa-item-i {
 
+        padding-bottom: 15px;
+        font-size: 3rem;
+        a {
+            color: $white;
+        }
+
+    }
 
 
 //четные
@@ -43,11 +51,11 @@
 
     }
 
-    @media screen and (max-width: 650px) {
+    @media screen and (max-width: 820px) {
         flex-basis: 50%;
     }
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 420px) {
         flex-basis: 100%;
     }
 
