JS get gallery item

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
 @import "byweb/polosa";
 @import "byweb/contents/top";
 @import "byweb/contents/why-us";
+@import "byweb/gallery";
 
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
