--- a/public/tpl/byweb/css/template.css
+++ b/public/tpl/byweb/css/template.css
@@ -724,3 +724,69 @@ pt-30 {
   width: calc(100% - 130px);
 }
 
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery-item {
+  box-sizing: border-box;
+  flex-basis: 20%;
+  border: 1px solid gold;
+}
+
+.gallery-item-img {
+  position: relative;
+}
+
+.gallery-item-img img {
+  width: 100%;
+}
+
+.gallery-item-txt {
+  background-color: rgba(15, 88, 92, 0.7);
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  color: #FFF;
+  font-size: 1.5rem;
+  font-weight: bold;
+  opacity: 0;
+}
+
+.gallery-item-txt:hover {
+  opacity: 1;
+  transition: all 1.5s ease;
+}
+
+.gallery-item-header a {
+  color: #FFF;
+}
+
+.gallery-item-link {
+  display: block;
+  width: 20px;
+  height: 20px;
+  padding: 10px;
+}
+
+.gallery-item-link a > i {
+  color: #FFF;
+  font-size: 1rem;
+}
+
+.gallery-item-header,
+.gallery-item-link {
+  width: 100%;
+}
+
+.gallery-btn {
+  margin: 0 auto;
+  padding: 30px;
+}
+
