--- a/public/tpl/byweb/css/template.css
+++ b/public/tpl/byweb/css/template.css
@@ -1,6 +1,5 @@
-@import url(https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;
-
-0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap);* {
+@import url(https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap);
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -14,13 +13,11 @@ html {
   overflow-x: hidden;
   font-size: 18px;
 }
-
 @media (max-width: 950px) {
   html {
     font-size: 15px;
   }
 }
-
 @media (max-width: 650px) {
   html {
     font-size: 16px;
@@ -34,17 +31,14 @@ body {
   color: #888888;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
   font-size: 1.5rem;
   padding-bottom: 15px;
   font-weight: 900;
   color: #2f343a;
 }
 
-h1,
-h2 {
+h1, h2 {
   text-transform: uppercase;
 }
 
@@ -98,7 +92,6 @@ a {
   box-sizing: border-box;
   flex-basis: 50%;
 }
-
 @media screen and (max-width: 720px) {
   .item-2 {
     flex-basis: 100%;
@@ -172,29 +165,23 @@ pt-30 {
   .item {
     width: 50%;
   }
-
   .item-4 {
     flex-basis: 50%;
   }
-
   .flex2-div {
     flex-basis: 100%;
     background: #777;
   }
 }
-
 @media only screen and (max-width: 320px) {
   .item {
     width: 100%;
   }
-
   .item-4 {
     flex-basis: 100%;
   }
 }
-
-.btn,
-.btn-slider {
+.btn, .btn-slider {
   display: inline-block;
   position: relative;
   color: #FFF;
@@ -210,7 +197,6 @@ pt-30 {
   text-transform: uppercase;
   font-weight: normal;
 }
-
 .btn:hover {
   background: #2f343a;
 }
@@ -219,11 +205,9 @@ pt-30 {
   background: #2f343a;
   font-weight: bold;
 }
-
 .btn-slider:hover {
   background: #fe7676;
 }
-
 .btn-slider::before {
   position: absolute;
   background-color: rgba(255, 255, 255, 0.6);
@@ -242,12 +226,10 @@ pt-30 {
   0% {
     transform: translateX(-4em) skewX(-45deg);
   }
-
   100% {
     transform: translateX(100em) skewX(-45deg);
   }
 }
-
 .nav {
   display: flex;
   flex-wrap: wrap;
@@ -255,7 +237,6 @@ pt-30 {
   padding: 20px 0px;
   z-index: 100;
 }
-
 @media screen and (max-width: 800px) {
   .nav {
     justify-content: center;
@@ -269,7 +250,6 @@ pt-30 {
   top: 0;
   z-index: 1000;
 }
-
 @media (max-width: 750px) {
   .sticky {
     padding-bottom: 10px;
@@ -280,13 +260,11 @@ pt-30 {
   position: relative;
   align-self: center;
 }
-
 @media screen and (max-width: 760px) {
   #logo {
     min-height: 50px;
   }
 }
-
 #logo a {
   text-decoration: none;
   font-weight: bold;
@@ -295,7 +273,6 @@ pt-30 {
   padding-left: 65px;
   z-index: 1000;
 }
-
 #logo a::before {
   position: absolute;
   background: #6dd4b2;
@@ -317,7 +294,6 @@ pt-30 {
   left: 0px;
   content: "";
 }
-
 #logo a::after {
   background: #fb9898;
   border: 2px solid #FFF;
@@ -332,7 +308,6 @@ pt-30 {
   left: 25px;
   content: "";
 }
-
 @media screen and (max-width: 870px) {
   #logo a {
     font-size: 1.5rem;
@@ -345,7 +320,6 @@ pt-30 {
   align-self: center;
   padding: 0 20px;
 }
-
 @media screen and (max-width: 820px) {
   .nav-menu {
     padding: 0;
@@ -356,7 +330,6 @@ pt-30 {
   display: flex;
   flex-wrap: wrap;
 }
-
 .menu-list a {
   text-decoration: none;
   color: #333;
@@ -364,37 +337,31 @@ pt-30 {
   text-transform: uppercase;
   font-size: 1rem;
 }
-
 .menu-list a:hover {
   color: #fe7676;
 }
-
 @media screen and (max-width: 1050px) {
   .menu-list a {
     font-size: 0.9rem;
     justify-content: space-between;
   }
 }
-
 @media screen and (max-width: 995px) {
   .menu-list a {
     font-size: 0.8rem;
     justify-content: space-between;
   }
 }
-
 @media screen and (max-width: 720px) {
   .menu-list a {
     font-size: 1rem;
   }
 }
-
 @media screen and (max-width: 720px) {
   .menu-list {
     justify-content: center;
   }
 }
-
 .menu-list li {
   list-style: none;
   padding: 0 10px;
@@ -412,7 +379,6 @@ pt-30 {
   position: relative;
   display: block;
 }
-
 .top strong {
   color: #fe7676;
   font-weight: normal;
@@ -428,26 +394,21 @@ pt-30 {
   box-sizing: border-box;
   padding: 7px;
 }
-
 .top-menu-item:nth-child(even) {
   flex-basis: 50%;
 }
-
 @media screen and (max-width: 1110px) {
   .top-menu-item {
     flex-basis: 33.3333333333%;
   }
-
   .top-menu-item:nth-child(even) {
     flex-basis: 33.3333333333%;
   }
 }
-
 @media screen and (max-width: 650px) {
   .top-menu-item {
     flex-basis: 100%;
   }
-
   .top-menu-item:nth-child(even) {
     flex-basis: 100%;
   }
@@ -476,7 +437,6 @@ pt-30 {
   background: linear-gradient(0deg, rgb(115, 195, 232) 0%, rgb(255, 255, 255) 100%);
   background-size: cover;
 }
-
 @media screen and (max-width: 750px) {
   .slider-img {
     opacity: 0.3;
@@ -492,7 +452,6 @@ pt-30 {
   width: 1490px;
   min-height: 330px;
 }
-
 @media screen and (max-width: 750px) {
   .slider-item {
     width: 100%;
@@ -505,61 +464,51 @@ pt-30 {
   width: 40%;
   justify-content: center;
 }
-
 @media screen and (max-width: 1350px) {
   .slider-item-txt {
     width: 30%;
   }
 }
-
 @media screen and (max-width: 850px) {
   .slider-item-txt {
     width: 20%;
   }
 }
-
 @media screen and (max-width: 750px) {
   .slider-item-txt {
     width: 100%;
     text-align: center;
   }
 }
-
 .slider-item-txt h1 {
   font-size: 2.5rem;
   padding-bottom: 10px;
   z-index: 100;
 }
-
 @media screen and (max-width: 1450px) {
   .slider-item-txt h1 {
     font-size: 2rem;
   }
 }
-
 @media screen and (max-width: 960px) {
   .slider-item-txt h1 {
     font-size: 1.5rem;
   }
 }
-
 .slider-item-txt h3 {
   padding: 5px 0 0 0;
   color: #b64545;
 }
-
 .slider-item-txt h3 > a {
   padding: 0;
   color: #b64545;
   text-decoration: none;
 }
-
 @media screen and (max-width: 1000px) {
   .slider-item-txt h3 > a {
     font-size: 1.2rem;
   }
 }
-
 .slider-item-txt p {
   color: #076ad0;
   font-weight: bold;
@@ -579,49 +528,38 @@ pt-30 {
   flex-basis: 25%;
   padding: 20px 7px;
 }
-
-.polosa-item h2,
-.polosa-item h3 {
+.polosa-item h2, .polosa-item h3 {
   font-size: 1rem;
   text-transform: uppercase;
   color: #FFF;
 }
-
 .polosa-item .polosa-item-i {
   padding-bottom: 15px;
   font-size: 3rem;
 }
-
 .polosa-item .polosa-item-i a {
   color: #FFF;
 }
-
 .polosa-item:nth-child(even) {
   background: #423550;
 }
-
 .polosa-item:nth-child(odd) {
   background: #d07f60;
 }
-
 .polosa-item:first-child {
   background: #5fa6aa;
 }
-
 .polosa-item:last-child {
   background: #4c3739;
 }
-
 .polosa-item:hover {
   background: #fe7676;
 }
-
 @media screen and (max-width: 820px) {
   .polosa-item {
     flex-basis: 50%;
   }
 }
-
 @media screen and (max-width: 420px) {
   .polosa-item {
     flex-basis: 100%;
@@ -632,7 +570,6 @@ pt-30 {
   display: flex;
   justify-content: space-between;
 }
-
 @media screen and (max-width: 820px) {
   .content-top-item {
     flex-wrap: wrap;
@@ -642,7 +579,6 @@ pt-30 {
 .content-top-item figure {
   flex-basis: 20%;
 }
-
 @media screen and (max-width: 820px) {
   .content-top-item figure {
     flex-basis: 100%;
@@ -650,11 +586,9 @@ pt-30 {
     padding-bottom: 20px;
   }
 }
-
 .content-top-item img {
   max-width: 460px;
 }
-
 @media screen and (max-width: 820px) {
   .content-top-item img {
     width: 100%;
@@ -664,12 +598,10 @@ pt-30 {
 .content-top-item-txt {
   flex-basis: 80%;
 }
-
 @media screen and (max-width: 820px) {
   .content-top-item-txt {
     flex-basis: 100%;
   }
-
   .content-top-item-txt h2 {
     text-align: center;
   }
@@ -678,12 +610,10 @@ pt-30 {
 .why-us {
   background: url("/tpl/byweb/img/why-us.jpg");
 }
-
 .why-us a {
   color: #076ad0;
   font-weight: bold;
 }
-
 .why-us a:hover {
   color: #ff3841;
 }
@@ -738,7 +668,6 @@ pt-30 {
 .gallery-item-img {
   position: relative;
 }
-
 .gallery-item-img img {
   width: 100%;
 }
@@ -758,7 +687,6 @@ pt-30 {
   font-weight: bold;
   opacity: 0;
 }
-
 .gallery-item-txt:hover {
   opacity: 1;
   transition: all 1.5s ease;
@@ -774,14 +702,12 @@ pt-30 {
   height: 20px;
   padding: 10px;
 }
-
 .gallery-item-link a > i {
   color: #FFF;
   font-size: 1rem;
 }
 
-.gallery-item-header,
-.gallery-item-link {
+.gallery-item-header, .gallery-item-link {
   width: 100%;
 }
 
@@ -789,4 +715,3 @@ pt-30 {
   margin: 0 auto;
   padding: 30px;
 }
-
