--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,8 @@
 @import "byweb/contents/top";
 @import "byweb/contents/why-us";
 @import "byweb/gallery";
+@import "byweb/calc";
+@import "byweb/inputs";
 
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
