--- a/resources/sass/byweb/_variables.scss
+++ b/resources/sass/byweb/_variables.scss
@@ -23,5 +23,7 @@ $green-dark: #5fa6aa;
 $cyan: #6cb2eb;
 $white: #FFF;
 $brown: #4c3739;
-
+$gray: #f6f8fa;
 $black: #2f343a;
+$dark: #444;
+$hr: #eee;
