--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,7 @@
 @import "byweb/gallery";
 @import "byweb/calc";
 @import "byweb/inputs";
+@import "byweb/icons/png-icons";
 
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
