--- a/resources/sass/byweb/calc.scss
+++ b/resources/sass/byweb/calc.scss
@@ -1,4 +1,5 @@
 .calc  {
+
     h2 {
         text-align: center;
         color: $dark;
@@ -13,13 +14,14 @@
 
 
 }
-
+//описание label inputs
 .calc-descprice {
     display: flex;
+    box-sizing: border-box;
     flex-wrap: wrap;
-    height: 155px;
+    height: 200px;
     overflow-y: auto !important;
-    margin: 0 auto 18px;
+    margin: 0 auto;
     padding: 22px 30px;
     font-size: 1rem;
     color: $indigo;
@@ -35,7 +37,7 @@
 
     .hr {
         display: block;
-        font-size:0.9rem;
+        font-size:0.8rem;
         font-weight: bold;
         margin:10px 0;
         padding: 10px 0;
@@ -47,16 +49,40 @@
 }
 .calc-row {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
+    box-sizing: border-box;
 }
 
 .calc-item {
-    flex-basis: 25%;
     box-sizing: border-box;
+    width: calc(98%/4);
     padding-top: 5px;
+    margin-right: 10px;
+    margin-top: 10px;
+
+    &:last-child {
+        margin-right: 0px;
+    }
+
+    @media screen and (max-width:1497px) {
+        width: calc(96%/3);
+    }
+
+    @media screen and (max-width:1000px) {
+        width: calc(98%/2);
+
+        margin-right: 0px;
+        //&:nth-child {
+        //    margin-right: 0px;
+        //}
+    }
+
+
     h4 {
-       color:$white;
+        color:$white;
         text-transform: uppercase;
+        font-weight: normal;
         margin: 0;
         padding: 30px 18px 25px;
         text-align: center;
@@ -69,4 +95,11 @@
         }
     }
 
+}
+
+.calc-price {
+    background: $green;
+    text-align: center;
+    padding:30px;
+    color: $white;
 }
