--- a/resources/sass/byweb/calc.scss
+++ b/resources/sass/byweb/calc.scss
@@ -100,6 +100,7 @@
 .calc-price {
     background: $green;
     text-align: center;
-    padding:30px;
+    padding:15px;
     color: $white;
+    font-size: 1.8rem;
 }
