--- a/resources/sass/byweb/icons/png-icons.scss
+++ b/resources/sass/byweb/icons/png-icons.scss
@@ -18,32 +18,32 @@
 }
 
 .woo, .woo-cms {
-    background-position: 0px -142px;
+    background-position: 0 -142px;
 }
 
 .vm, .vm-cms {
-    background-position: 0px -121px;
+    background-position: 0 -121px;
 }
 .joomla, .joomla-cms {
-    background-position: 0px 0px;
+    background-position: 0;
 }
 
 .wp, .wp-cms {
-    background-position: 0px -20px;
+    background-position: 0 -20px;
 }
 
 .bitrix, .bitrix-cms {
-    background-position: 0px -39px;
+    background-position: 0 -39px;
 }
 
 .laravel, .laravel-cms {
-    background-position: 0px -79px;
+    background-position: 0 -79px;
 }
 
 .php, .php-cms {
-    background-position: 0px -100px;
+    background-position: 0 -100px;
 }
 
 .opencart, .opencart-cms {
-    background-position: 0px -59px;
+    background-position: 0 -59px;
 }
