--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 @import "byweb/calc";
 @import "byweb/inputs";
 @import "byweb/icons/png-icons";
-
+@import "byweb/contents/how-we-work";
+@import "byweb/contents/reviews";
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
