--- a/resources/sass/byweb/contents/top.scss
+++ b/resources/sass/byweb/contents/top.scss
@@ -1,6 +1,13 @@
-
-
 .content-top {
+
+    strong {
+        color: $pink;
+    }
+    h3 {
+        padding-top: 15px;
+        text-align: center;
+        font-weight: normal;
+    }
 
 }
 .content-top-item{
