--- a/resources/sass/byweb/calc.scss
+++ b/resources/sass/byweb/calc.scss
@@ -1,18 +1,14 @@
 .calc  {
-
     h2 {
         text-align: center;
         color: $dark;
     }
-
 }
 
 .calc-desc {
     text-align: center;
     color: $dark;
     padding-bottom: 10px;
-
-
 }
 //описание label inputs
 .calc-descprice {
@@ -45,8 +41,8 @@
         border-top: 1px solid $hr;
         text-align: center;
     }
-
 }
+
 .calc-row {
     display: flex;
     justify-content: space-between;
@@ -56,7 +52,7 @@
 
 .calc-item {
     box-sizing: border-box;
-    width: calc(98%/4);
+    width: calc(100%/4 - 10px);;
     padding-top: 5px;
     margin-right: 10px;
     margin-top: 10px;
@@ -77,7 +73,6 @@
         //    margin-right: 0px;
         //}
     }
-
 
     h4 {
         color:$white;
