--- a/resources/sass/byweb/contents/reviews.scss
+++ b/resources/sass/byweb/contents/reviews.scss
@@ -1,49 +1,66 @@
-.why-us {
-    background: url("/tpl/byweb/img/why-us.jpg");
+.reviews {
+    background: url("/tpl/byweb/img/reviews.jpg");
+    color: $dark;
+}
 
-    a {
-        color: $indigo;
-        font-weight: bold;
-        &:hover {
-            color: $red;
+.review-header {
+    font-weight: bold;
+    color: $pink;
+    text-transform: uppercase;
+    padding-top: 10px;
+    font-size: 0.9em;
+}
+.reviews-img {
+    border: 2px solid $pink;
+    border-radius: 500px;
+    margin-bottom: 10px;
+    box-shadow: .3rem .3rem 1rem rgba(23, 26, 15, 0.31);
+    -webkit-box-shadow: .3rem .3rem 1rem rgba(23, 26, 15, 0.31);
+    -moz-box-shadow: .3rem .3rem 1rem rgba(23, 26, 15, 0.31);
+}
+
+.reviews-items .item-1 h3 {
+    font-size: 1.5rem;
+    font-weight: normal;
+    padding-bottom: 10px;
+}
+.reviews-item-txt {
+    width: calc(100% - 300px);
+    margin:0 auto;
+}
+
+ul[id="review-list"] {
+
+    li {
+        display: none;
+        list-style-type: none;
+        &:first-of-type {
+
+            display: block;
         }
     }
 }
 
-.why-us-items .item-2 h3 {
-    font-size: 1.5rem;
-    font-weight: normal;
-    padding-bottom: 10px;
-
-}
-
-.why-us-icons {
-    display: flex;
-    margin: 10px 0;
-}
-
-.why-us-item-icon {
-    display: flex;
-    box-sizing: border-box;
+.caroufredsel_prev, .caroufredsel_next {
+    position: absolute;
+    padding-top: 80px;
+    cursor: pointer;
+    //font-weight: bold;
     color: $pink;
-    padding: 60px;
-    background: $body-bg;
-    border-radius:1000px;
-    height: 130px;
-    width: 130px;
-    border: 1px solid $pink;
-    margin: 0 15px;
-    text-align: center;
-    justify-content: center;
-
+    font-size: 1.5rem;
 }
 
-.why-us-item-icon i {
-    box-sizing: border-box;
-    align-self: center;
-    font-size: 54px;
+.caroufredsel_prev {
+    left: 0;
+    margin-left:20px;
 }
 
-.why-us-item-txt {
-    width: calc(100% - 130px);
+.caroufredsel_next {
+    right: 0;
+    margin-right:20px;
 }
+
+
+
+
+
