--- a/resources/sass/byweb/slider/slider-item.scss
+++ b/resources/sass/byweb/slider/slider-item.scss
@@ -67,7 +67,7 @@
 
 
     h1 {
-        font-size: 2.5rem;
+        font-size: 2.3rem;
         padding-bottom: 10px;
         z-index: 100;
 
@@ -84,6 +84,7 @@
     h3 {
         padding: 5px 0 0 0;
         color: #b64545;
+        font-weight: normal;
     }
 
     h3 > a {
