--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,5 +17,6 @@
 @import "byweb/icons/png-icons";
 @import "byweb/contents/how-we-work";
 @import "byweb/contents/reviews";
+@import "byweb/contents/footer";
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
