--- a/resources/sass/byweb/contents/reviews.scss
+++ b/resources/sass/byweb/contents/reviews.scss
@@ -48,6 +48,13 @@ ul[id="review-list"] {
     //font-weight: bold;
     color: $pink;
     font-size: 1.5rem;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .caroufredsel_prev {
