--- a/resources/sass/byweb/template.scss
+++ b/resources/sass/byweb/template.scss
@@ -128,8 +128,12 @@ a {
 .py-30 {
     padding: 30px 0;
 }
-pt-30 {
+.pt-30 {
     padding-top: 30px;
+}
+
+.pt-50 {
+    padding-top: 50px;
 }
 
 .pb-30 {
