--- a/resources/sass/byweb/_variables.scss
+++ b/resources/sass/byweb/_variables.scss
@@ -25,7 +25,9 @@ $white: #FFF;
 $brown: #4c3739;
 $gray: #f6f8fa;
 $footer-gray: #888;
+$footer-pink: #fb9898;
 $black: #2f343a;
 $dark: #444;
+$form-hover-button: #333;
 $hr: #eee;
 $gray2: #f6f8fa;
