--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,5 +18,6 @@
 @import "byweb/contents/how-we-work";
 @import "byweb/contents/reviews";
 @import "byweb/contents/footer";
+@import "byweb/form";
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
