--- a/resources/sass/byweb/contents/reviews.scss
+++ b/resources/sass/byweb/contents/reviews.scss
@@ -27,20 +27,27 @@
 .reviews-item-txt {
     width: calc(100% - 300px);
     margin:0 auto;
+
+    @media screen and (max-width:980px) {
+        width: calc(100% - 50px);
+    }
+    @media screen and (max-width:500px) {
+        width: 100%;
+    }
+
+
 }
-
+/*отображать только первый элеент в списке*/
 ul[id="review-list"] {
-
     li {
         display: none;
         list-style-type: none;
         &:first-of-type {
-
             display: block;
         }
     }
 }
-
+/*кнопки вперед назад начало */
 .caroufredsel_prev, .caroufredsel_next {
     position: absolute;
     padding-top: 80px;
@@ -48,7 +55,7 @@ ul[id="review-list"] {
     //font-weight: bold;
     color: $pink;
     font-size: 1.5rem;
-
+/*убираем выделение кнопок*/
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -67,7 +74,7 @@ ul[id="review-list"] {
     margin-right:20px;
 }
 
-
+/*кнопки вперед назад конец */
 
 
 
