--- a/resources/sass/byweb/icons/png-icons.scss
+++ b/resources/sass/byweb/icons/png-icons.scss
@@ -48,3 +48,12 @@
 .opencart, .opencart-cms {
     background-position: 0 -59px;
 }
+
+
+#telegram {
+    height: 25px;
+    width: 25px;
+    vertical-align: middle;
+}
+
+
